nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: <name_cluster_issue>
spec:
  tls:
    - hosts: 
        - myapp.test.com
      secretName: <secret-name>
  rules:
  - host: myapp.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
